Resolved footer animation spacing issue

--- a/wp-content/themes/fr-starter-theme/resources/styles/components/_wpcf7.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/components/_wpcf7.scss
@@ -75,6 +75,7 @@
 
         .submit-container{
             position: relative;
+            margin-bottom: 0 !important;
 
             .wpcf7-spinner {
                 position: absolute;
